# eaxy

./: LICENSE  README.md  eaxy.mplstyle  fit.py  iratios.txt  pyproject.toml
eaxy/: __init__.py  __main__.py  fit.py
